--- a/aboutme.html
+++ b/aboutme.html
@@ -4,6 +4,7 @@
 <style>
     body {
         background-color: powderblue;
+        size: 2;
     }
     
     h1 {
@@ -16,8 +17,14 @@
     }
 </style>
 <h1>About Saloni Vora</h1>
+I hail from a country whose culture and colors are the most prominent contours. My classes this quarter are:
+<ol>
+    <li>Web Application Programming</li>
+    <li>Software Architecture</li>
+</ol>
 
 <body>
+
 
 </body>
 
